--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-v0-project",
   "version": "0.1.0",
+  "packageManager": "pnpm@9.12.3"
   "private": true,
   "scripts": {
     "build": "next build",
