--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
+
 {
   "name": "my-v0-project",
   "version": "0.1.0",
-  "packageManager": "pnpm@9.12.3"
+  "packageManager": "pnpm@9.12.3",
   "private": true,
   "scripts": {
     "build": "next build",
@@ -76,5 +77,4 @@
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
-  }
-}
+   }
