--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
-
 {
   "name": "my-v0-project",
   "version": "0.1.0",
-  "packageManager": "pnpm@9.12.3",
   "private": true,
+  "packageManager": "pnpm@9.12.3",
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
-    "lint": "eslint .",
-    "start": "next start"
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@ai-sdk/openai": "2.0.52",
@@ -57,8 +56,8 @@
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-day-picker": "9.8.0",
     "react-dom": "19.1.0",
+    "react-day-picker": "9.8.0",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
@@ -73,11 +72,10 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8.5",
+    "postcss": "^8.5.0",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5"
+    "typescript": "^5.0.0"
   }
 }
-
 
